--- a/package.json
+++ b/package.json
@@ -96,8 +96,12 @@
   },
   "dependencies": {
     "@lvce-editor/ripgrep": "^1.6.0",
+    "@types/better-sqlite3": "^7.6.13",
+    "better-sqlite3": "^12.2.0",
+    "canvas": "^3.2.0",
     "simple-git": "^3.28.0",
-    "strip-ansi": "^7.1.0"
+    "strip-ansi": "^7.1.0",
+    "uuid": "^13.0.0"
   },
   "optionalDependencies": {
     "@lydell/node-pty": "1.1.0",
